Tue Mar 11 10:26:49 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.2-pre1.
	* po/man-db.pot, po/*.po: Update.

Mon Mar 10 19:42:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (Controlling formatted output): Quote %pager,
	  since it may expand to multiple words.

Mon Mar 10 16:07:11 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: More updates for 2.5.2.

Mon Mar 10 16:00:15 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Rename to ...
	* man/po4a/po/man-db-manpages.pot: ... this, so that the translation
	  domain name stops clashing with that used for program translations
	  (per Benno Schulenberg).
	* man/po4a/po4a.cfg (po4a_paths): Adjust for rename.

Mon Mar 10 01:05:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (.man1.1, .man8.8): Substitute name of manual page
	  being processed as %program%.
	* man/man1/apropos.man1 (OPTIONS), man/man1/man.man1 (Finding manual
	  pages), man/man1/whatis.man1 (OPTIONS): Consolidate
	  nearly-identical descriptions of --locale using %program% (thanks,
	  Robert Luberda).
	* man/po4a/po/man-db.pot: Update.

Tue Mar  4 09:24:40 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080301.

Tue Mar  4 09:18:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Force --extension to appear after --sections
	  in --help output.

Mon Mar  3 21:46:36 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Update.

Sun Mar  2 12:41:13 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* po/man-db.pot, po/*.po: Update.

Sun Mar  2 12:37:43 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options): Describe --recode's argument as ENCODING, not
	  CODE (thanks, Benno Schulenberg).

Sun Mar  2 12:35:28 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options), src/manpath.c (options), src/whatis.c
	  (options): Use a unified description for --systems (thanks, Benno