@@ -1,3 +1,10 @@
+Tue Mar 11 10:39:45 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* configure.ac (AC_CONFIG_FILES): Add man/po4a/Makefile.
+	* man/Makefile.am (SUBDIRS): Add po4a.
+	* man/po4a/Makefile.am: New file. Distribute po4a.cfg and
+	  po/man-db-manpages.pot.
+
 Tue Mar 11 10:26:49 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* Version: 2.5.2-pre1.
